# ArxivPaperClassification

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
config/: inference_config.py  pipeline_config.py
container_setup/: Dockerfile  build.sh  credentials  launch_container.sh
data/checkpoints/checkpoint-12300/: config.json  model.safetensors  trainer_state.json
entrypoints/: app.py  pipeline.py
scripts/: launch_app.sh  pipeline.sh
src/app/: data_validation.py  setup_model.py  tags_mapping.py  visualization.py
src/pipeline/: arxiv_dataset.py  env_setup.py  logging_setup.py  metrics.py  model_setup.py
