[project]
name = "opinionanalyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "evaluate>=0.4.3",
    "ipykernel>=6.29.5",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "transformers>=4.50.3",
]
